Fixes column alignment of grades

--- a/stylesheets/classy-cate.scss
+++ b/stylesheets/classy-cate.scss
@@ -11,12 +11,10 @@ body {
   position: relative;
 }
 
-.navbar {
-  margin-top: 15px;
-}
-
-#page-content {
-  min-height : 200px;
+.wrapper {
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 128px + 120px; // height of footer
 }
 
 a i {
@@ -28,47 +26,9 @@ a i {
   text-align: center;
 }
 
-.list-text {
-  margin-left: 30px;
-}
-
-.list-icon-container {
-  float: left
-}
-
 .section-header {
   margin-top: 0;
   font-size: 30px;
-}
-
-.footer {
-  text-align: center;
-  padding: 30px 0;
-  margin-top: 40px;
-  border-top: 1px solid #E5E5E5;
-  background-color: whiteSmoke;
-  bottom: 0px;
-  position: absolute;
-  width: 100%;
-  .old-cate.btn {
-    $old-btn-width: 180px;
-    width: $old-btn-width;
-    margin-left: -$old-btn-width/2;
-    margin-top: -80px;
-    position: absolute;
-  }
-}
-
-select {
-  width: 150px;
-}
-
-.form-horizontal .control-label {
-  width: 60px;
-}
-
-.form-horizontal .controls {
-  margin-left: 80px;
 }
 
 #fade {
@@ -78,8 +38,5 @@ select {
   opacity:0; z-index:1;
 }
 
-.wide_table {
-  width: 100%;
-}
 
 
