--- a/stylesheets/navbar.scss
+++ b/stylesheets/navbar.scss
@@ -1,3 +1,6 @@
+.navbar {
+  margin-top: 15px;
+}
 ul.change-year {
   .available-years {
     $btn-width: 124px;
